# octopus_viz

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: linting.yaml
docker/: entrypoint.sh
octopus_viz/: manage.py
octopus_viz/cli/: raw_consumption.py  utils.py  viz_consumption.py
octopus_viz/ingestion/: context_processors.py  urls.py  utils.py
octopus_viz/ingestion/admin/: __init__.py  _actions.py  _views.py
octopus_viz/ingestion/aggregator/: consumption.py  dto.py
octopus_viz/ingestion/forms/: configuration.py  graphs.py
octopus_viz/ingestion/management/: tariff_management.py
octopus_viz/ingestion/management/commands/: _utils.py  cache_ingestion.py  config_ingestion.py  data_ingestion.py  update_consumption.py
octopus_viz/ingestion/migrations/: 0001_initial.py  0002_alter_tariff_valid_from_alter_tariff_valid_until.py  0003_consumption_tariff_alter_tariff_valid_from_and_more.py
octopus_viz/ingestion/models/: __init__.py  _aggregate.py  _consumption.py  _enums.py  _filters.py  _meter.py  _tariff.py  _updates.py
octopus_viz/ingestion/octopus_client/: api.py
octopus_viz/ingestion/templates/admin/: add_flux_tariff.html
octopus_viz/ingestion/templates/ingestion/: base.html  index.html  monthly_graph.html
octopus_viz/ingestion/views/: configuration.py  graphs.py  home.py  menu.py  utils.py
octopus_viz/octopus_client/: api.py  cache.py  dto.py  utils.py
octopus_viz/octopus_viz/: asgi.py  settings.py  urls.py  wsgi.py
octopus_viz/viz/: aggregator.py
scripts/: format.sh  lint.sh
test/octopus_viz/octopus_client/: test_dto.py
