[tool.poetry]
name = "octopus-viz"
version = "0.1.0"
description = ""
authors = ["Thomas Richard <thomrich0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

Django = "^5.0.3"
requests = "*"
pytz = "*"
django-bootstrap5 = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-django = "*"
pytest-random-order = "*"
ruff = "*"
changelog_gen = {version="~0.9", extras=["bump-my-version"]}

[tool.changelog_gen]
commit = true
release = true
allow_dirty = false

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "README.md"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.pytest.ini_options]
addopts = [
  "--random-order"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
